--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#1D1D1D</color>
     <color name="colorPrimaryDark">#1D1D1D</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#2B7CD3</color>
     <color name="colorDividor">#EFEFF4</color>
     <color name="textColor">#000000</color>
 </resources>
