--- a/app/src/main/res/layout/item_facts.xml
+++ b/app/src/main/res/layout/item_facts.xml
@@ -14,7 +14,7 @@
         android:id="@+id/contraint_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="@dimen/item_constraint_margin">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -23,12 +23,10 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp">
-
+                android:layout_margin="@dimen/card_view_margin">
 
                 <TextView
                     android:id="@+id/tv_title"
@@ -36,12 +34,11 @@
                     android:layout_height="wrap_content"
                     android:text="@{facts.title}"
                     android:textColor="@color/textColor"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/text_title"
                     app:layout_constraintBottom_toTopOf="@id/tv_desc"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="Title" />
-
+                    tools:text="@string/title" />
 
                 <TextView
                     android:id="@+id/tv_desc"
@@ -50,7 +47,7 @@
                     android:ellipsize="end"
                     android:text="@{facts.description}"
                     android:textColor="@color/textColor"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/text_desc"
                     app:layout_constrainedWidth="true"
                     app:layout_constraintHorizontal_chainStyle="spread_inside"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -62,7 +59,7 @@
                     android:id="@+id/iv_fact"
                     android:layout_width="100dp"
                     android:layout_height="70dp"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginLeft="@dimen/item_constraint_margin"
                     app:layout_constraintLeft_toRightOf="@+id/tv_desc"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_title"
@@ -71,7 +68,5 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
