--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="item_constraint_margin">5dp</dimen>
     <dimen name="text_title">20sp</dimen>
     <dimen name="text_desc">14sp</dimen>
+    <dimen name="image_height">70dp</dimen>
+    <dimen name="image_width">100dp</dimen>
 </resources>
